--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </head>
-    <body>
+    <body class="parallax">
         <!--NAVBAR START-->
         <div class="navbar navbar-inverse navbar-twitch" role="navigation">
             <div class="container">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">
-                        <span class="small-nav"> <span class="logo"> <B> </span> </span>
+                        <span class="small-nav"> <span class="logo">  </span> </span>
                         <span class="full-nav">SeqU</span>
                     </a>
                 </div>
@@ -53,7 +53,31 @@
                 </div>
             </div>
         </div>
-        <!--NAVBAR END-->
+        <!--NAVBAR END--> 
         
+        <h1 class="center" dir="rtl" style="color:White"> مرحبا بكم في SeQu</h1>
+    <table border="1px solid black" width="70%" height="30%">
+    <tr>
+        <th align="center">
+        المعادلات الفيزيائيه
+        </th>
+        <th align="center">
+        المعادلات الكيميائيه
+        </th>
+        </tr>
+        </table>
+    <br>
+        <hr>
+        <br>
+        <h3 dir="rtl" class="center" style="color:White"> ما هو SeQu</h3>
+        <br>
+        <div id="color-g">
+        <p dir="rtl" id="bg">هو موقع يساعد الطلاب و يساعد المعلمين في الشرح ماده الكيمياء بطريقه مبسيطه مع القوانين  و ماده الفيزياء ايضا الموقع م زال تحت التطوير 
+</p>
+            </div>
+        
+        <!--<div class="footer">
+        <p> all copyRight Return to Code-12</p>
+        </div>-->
     </body>
 </html>
