--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
     <table width="70%" height="30%">
     <tr>
         <td align="center">
-            <font size="6" color="white"><a href="#">المعادلات الفيزيائيه </a></font>
+            <font size="6" color="white"><a href="#"> معادلات كيميائية </a></font>
         </td>
         <td align="center">
-           <font size="6" color="white"><a href="#">المعادلات الكيميائيه</a></font>
+           <font size="6" color="white"><a href="#"> حل المعادلات </a></font>
         </td>
         </tr>
         </table>
