--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <table width="70%" height="30%">
     <tr>
         <td align="center">
-            <font size="6" color="white"><a href="#"> معادلات كيميائية </a></font>
+            <font size="6" color="white"><a href="ch.html"> معادلات كيميائية </a></font>
         </td>
         <td align="center">
            <font size="6" color="white"><a href="#"> حل المعادلات </a></font>
