--- a/ch.html
+++ b/ch.html
@@ -92,7 +92,7 @@
         <div class="col-md-4 col-lg-4">
             <h3 class="center"> اختر الفصل </h3>
 
-            <select id="selectbasic" name="selectbasic">
+            <select>
                 
       <option value="1" selected >الفصل الاول</option>
       <option value="2">الفصل الثاني</option>
