--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <font size="6" color="white"><a href="ch.html"> معادلات كيميائية </a></font>
         </td>
         <td align="center">
-           <font size="6" color="white"><a href="#"> حل المعادلات </a></font>
+           <font size="6" color="white"><a href="phs.html"> حل المعادلات </a></font>
         </td>
         </tr>
         </table>
