rami chpter 3 update

--- a/ch.html
+++ b/ch.html
@@ -77,12 +77,15 @@
                 <option value="2">الفصل الثاني</option>
                 <option value="3">الفصل الثالث</option>
             </select>
-            <button class="btn btn-default col-lg-1 col-md-1">ابحث</button>
+            <br>
+            <center>
+                <button class="btn btn-default col-lg-1 col-md-1">ابحث</button>
+            </center>
         </div>
     </div>
 
     <br />
-    
+
     <script src="jsSrc/jquery-3.2.0.slim.min.js"></script>
     <script src="jsSrc/index.js"></script>
 </body>
