--- a/ph3.html
+++ b/ph3.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style/Phs%20Css.css">
+    <link rel="stylesheet" href="style/Ph3.css">
     <script type="text/javascript" src="jsSrc/index.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -57,93 +57,65 @@
     </div>
     <!--NAVBAR END-->
     <br>
-
-    <h1 class="center color-white"> قوانين فصل الاول </h1>
-
-    <br>
-
-    <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-        <div class="panel panel-default">
-            <div class="panel-heading" role="tab" id="headingOne">
+    <h1 class="center color-white"> قوانين الوحده الثالثه</h1>
+     <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+    <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingSixteen">
                 <h3 class="panel-title center" dir="rtl">
-                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-       قانون بويل
-        </a>
-                </h3>
-            </div>
-            <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-                <div class="panel-body" dir="rtl">
-
-
-                </div>
-            </div>
-        </div>
-        <div class="panel panel-default">
-            <div class="panel-heading" role="tab" id="headingTwo">
-                <h3 class="panel-title center" dir="rtl">
-                    <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-        قانون شارل
-        </a>
-                </h3>
-            </div>
-            <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-                <div class="panel-body" dir="rtl">
-
-
-                </div>
-            </div>
-        </div>
-        <div class="panel panel-default">
-            <div class="panel-heading" role="tab" id="headingThree">
-                <h3 class="panel-title center" dir="rtl">
-                    <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-         قانون جاي لوساك
-        </a>
-                </h3>
-            </div>
-            <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-                <div class="panel-body" dir="rtl">
-
-                </div>
-            </div>
-        </div>
-        <div class="panel panel-default">
-            <div class="panel-heading" role="tab" id="headingfour">
-                <h3 class="panel-title center" dir="rtl">
-                    <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapsefour" aria-expanded="false" aria-controls="collapsefour">
-                    القانون العام للغارات 
+                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSixteen" aria-expanded="true" aria-controls="collapseSixteen">
+                        ثابت التأين K<sub>w</sub>
                     </a>
                 </h3>
             </div>
-            <div id="collapsefour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading">
+            <div id="collapseSixteen" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingSixteen">
                 <div class="panel-body" dir="rtl">
-
-
                 </div>
             </div>
         </div>
         <div class="panel panel-default">
-            <div class="panel-heading" role="tab" id="headingfive">
+            <div class="panel-heading" role="tab" id="headingSeventeen">
                 <h3 class="panel-title center" dir="rtl">
-                    <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapsefive" aria-expanded="false" aria-controls="collapsefive">
-                        قانون الغاز المثالي
+                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSeventeen" aria-expanded="true" aria-controls="collapseSeventeen">
+                         الرقم الهيدروجيني pH
                     </a>
                 </h3>
             </div>
-            <div id="collapsefive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading">
+            <div id="collapseSeventeen" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingSeventeen">
+                <div class="panel-body" dir="rtl">
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingEightteen">
+                <h3 class="panel-title center" dir="rtl">
+                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseEightteen" aria-expanded="true" aria-controls="collapseEightteen">
+                         الرقم الهيدروكسيدي POH
+                    </a>
+                </h3>
+            </div>
+            <div id="collapseEightteen" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingEightteen">
+                <div class="panel-body" dir="rtl">
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingNineteen">
+                <h3 class="panel-title center" dir="rtl">
+                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseNineteen" aria-expanded="true" aria-controls="collapseNineteen">
+                      ما العلاقه بين ph و POH ؟
+                    </a>
+                </h3>
+            </div>
+            <div id="collapseNineteen" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingNineteen">
                 <div class="panel-body" dir="rtl">
                 </div>
             </div>
         </div>
     </div>
-     <center>
-<button type="button" class="btn btn-default" aria-label="Left Align">
- التالي <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span>
-</button>
-         </center>
-                      
-
-   <!-- <script src="jsSrc/jquery-3.2.0.slim.min.js"></script>-->
-</body>
-
+    <center>
+    <button type="button" class="btn btn-default" aria-label="Left Align">
+   <span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> السابق 
+        </button>
+        </center>
+    </body>
 </html>
