--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
     <!--h3 class="center text-color-white" dir="rtl"> لماذا تم انشاء SeqU</h3-->
     <p class="imgb center" style="color:#ffffff;font-size:38px;"> أو سكيو هو تطبيق ويب لحل معادلات كيمياء4 SeqU</p>
     <footer>
-        <a href="http://github.com/CODE-12"><p>ALL RIGHT RESEVED&copy; TO CODE-12&reg;</p></a>
+        <a href="http://github.com/CODE-12">
+            <p>ALL RIGHT RESEVED&copy; TO CODE-12&reg;</p>
+        </a>
     </footer>
     <script src="jsSrc/jquery-3.2.0.slim.min.js"></script>
     <script src="jsSrc/index.js"></script>
