--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
     <table width="70%" height="30%">
         <tr>
             <td align="center">
-                <font size="6" color="white"><a href="ch.html"> معادلات كيميائية </a></font>
+                <font size="6" color="white">(قريبا)</font>
             </td>
             <td align="center">
-                <font size="6" color="white"><a href="phs.html"> حل المعادلات </a></font>
+                <font size="6" color="white"><a href="ch.html"> حل المعادلات </a></font>
             </td>
         </tr>
     </table>
@@ -76,8 +76,6 @@
     <br>
     <div id="color-g">
     </div>
-    <hr>
-    <!--h3 class="center text-color-white" dir="rtl"> لماذا تم انشاء SeqU</h3-->
     <p class="imgb center" style="color:#ffffff;font-size:38px;"> أو سكيو هو تطبيق ويب لحل معادلات كيمياء4 SeqU</p>
     <footer>
         <a href="http://github.com/CODE-12">
