--- a/uunit -1.html
+++ b/uunit -1.html
@@ -26,7 +26,7 @@
     <input type="text" id="v2" class="tex" >
     <p id="eq">=</p>
 
-    <div class="buttom" onclick="Sharles()">الحل </div>  
+    <div class="buttom" onclick="Poyle()">الحل </div>  
         <div id="res-div" >
             النتيجة
         <div class="result" id="result">  </div>
@@ -60,7 +60,7 @@
     <input type="text" id="P2" class="tex" >
     <p id="eq">=</p>
 
-    <div class="buttom" onclick="Sharles()">الحل </div>  
+    <div class="buttom" onclick="Lusac()">الحل </div>  
         <div id="res-div" >
             النتيجة
         <div class="result" id="result">  </div>
@@ -80,7 +80,7 @@
     <input type="text" id="tt2" class="tex" >
     <p id="eq">=</p>
 
-    <div class="buttom" onclick="Sharles()">الحل </div>  
+    <div class="buttom" onclick="publicc()">الحل </div>  
         <div id="res-div" >
             النتيجة
         <div class="result" id="result">  </div>
@@ -97,7 +97,7 @@
     <p id="eq">=</p>
                 <p id="R">R</p>
 
-    <div class="buttom" onclick="Sharles()">الحل </div>  
+    <div class="buttom" onclick="perfect()">الحل </div>  
         <div id="res-div" >
             النتيجة
         <div class="result" id="result">  </div>
@@ -118,7 +118,7 @@
     <p id="eq">=</p>
     <p id="r"> R</p>
 
-    <div class="buttom" onclick="Sharles()">الحل </div>  
+    <div class="buttom" onclick="Molarr()">الحل </div>  
         <div id="res-div" >
             النتيجة
         <div class="result" id="result">  </div>
@@ -137,7 +137,7 @@
     <p id="eq">=</p>
     <p id="r"> R</p>
 
-    <div class="buttom" onclick="Sharles()">الحل </div>  
+    <div class="buttom" onclick="Density()">الحل </div>  
         <div id="res-div" >
             النتيجة
         <div class="result" id="result">  </div>
