--- a/ch.html
+++ b/ch.html
@@ -79,12 +79,14 @@
             </select>
             <br>
             <br>
-            <center>
-                <button class="btn btn-default col-lg-1 col-md-1">ابحث</button>
-            </center>
+
         </div>
     </div>
-
+    <br>
+    <br>
+    <center>
+        <button class="btn btn-default">ابحث</button>
+    </center>
     <br />
 
     <script src="jsSrc/jquery-3.2.0.slim.min.js"></script>
