--- a/phs.html
+++ b/phs.html
@@ -10,12 +10,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="style/Phs%20Css.css">
-<<<<<<< HEAD
     <script src="jsSrc/chapter-one.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular.min.js"></script>
-=======
     <script type="text/javascript" src="jsSrc/chapter-one.js"></script>
->>>>>>> 495407400d4a3d877cc40854a3adf359b36a4e5b
     <script type="text/javascript" src="jsSrc/index.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -68,6 +65,7 @@
     <h1 class="center color-white"> قوانين فصل الاول </h1>
 
     <br>
+    <div class="container-fluid">
 <div class="row">
     <div class=" col-xs-12 col-sm-12 col-md-4 col-lg-4 ">  </div>
     <div class="panel-group col-xs-12 col-sm-12 col-md-4 col-lg-4 " id="accordion" role="tablist" aria-multiselectable="true">
@@ -363,6 +361,7 @@
             </div>
         </div>
     </div>
+        </div>
     
     <div class=" col-xs-12 col-sm-12 col-md-6 col-lg-4">  </div>
     </div>
