--- a/phs.html
+++ b/phs.html
@@ -294,7 +294,7 @@
                         <br> m
                         <br>
                        
-                        <input type="text" id="R" placeholder="">
+                        <input type="text" id="m3" placeholder="">
                         <br> T
                         <br>
                         <input type="text" id="T5" placeholder="">
