tabtab is number one

--- a/ch.html
+++ b/ch.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="jsSrc/index.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="jsSrc/ch.js"></script>
 </head>
 
 <body class="bgh">
@@ -85,14 +86,14 @@
     <br>
     <br>
     <center>
-        <button class="btn btn-default">ابحث</button>
+        <button class="btn btn-default" onclick="tl()">ابحث</button>
     </center>
     <br />
   <footer>
         <a href="http://github.com/CODE-12">
             <p>ALL RIGHT RESEVED&copy; TO CODE-12&reg;</p>
         </a>
-    </footer>
+    </footer> 
     <script src="jsSrc/jquery-3.2.0.slim.min.js"></script>
     <script src="jsSrc/index.js"></script>
 </body>
